# std

./: .eslintrc.json  .gitignore  .travis.yml  CONTRIBUTING  INSTALL  NEWS  NEWS.md  README  README.md  TODO  another-elm  another-elm-reset  config.json  custom-core.sh  elm-package.json  elm.json  index.js  init-elm-home.sh  init.py  make-pkg.sh  package.json  patch.js  refresh.sh  update-json.js  x.py
browser/: README.md  elm.json  (+1 more)
tests/sscce-tests/: .gitignore  Cargo.toml  README.md  bors.toml  exit-codes.md
tests/sscce-tests/.github/workflows/: ci.yml
tests/sscce-tests/embed-assets/: key.key
tests/sscce-tests/embed-assets/elm-serverless/: .eslintignore  CHANGELOG.md  README.md  elm.json  package.json
tests/sscce-tests/embed-assets/elm-serverless/demo/: webpack.config.js
tests/sscce-tests/embed-assets/elm-serverless/src-bridge/: index.js  xmlhttprequest.js
tests/sscce-tests/src/: main.rs
tests/sscce-tests/src/lib/: cli.rs  find_suites.rs  mod.rs  suite.rs
tests/sscce-tests/suite/compiler-tests/lambda-empty-record/: Main.elm  elm.json
tests/sscce-tests/suite/echo/: Main.elm  output.json
tests/sscce-tests/suite/hello-world/: Main.elm  elm.json
tests/sscce-tests/suite/if-then-else/: Main.elm
tests/sscce-tests/suite/kill/: output.json
tests/sscce-tests/suite/map-cmd/: Main.elm  elm.json  output.json
tests/sscce-tests/suite/module-name-clash/: Main.elm  Module1.elm  README.md
tests/sscce-tests/suite/multiple-processes/: Main.elm
tests/sscce-tests/suite/random/: Main.elm  elm.json  output.json
tests/sscce-tests/suite/update-loop/: Main.elm
(+321 files in other folders)
